using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Utilities
{
    public enum DancePadKey
    {
        TopLeft = KeyCode.JoystickButton6, TopMiddle = KeyCode.JoystickButton2, TopRight = KeyCode.JoystickButton7,
        MiddleLeft = KeyCode.JoystickButton0, MiddleRight = KeyCode.JoystickButton3,
        BottomLeft = KeyCode.JoystickButton4, BottomMiddle = KeyCode.JoystickButton1, BottomRight = KeyCode.JoystickButton5,
        Back = KeyCode.JoystickButton8, Start = KeyCode.JoystickButton9
    }
}
